[gd_scene load_steps=32 format=3 uid="uid://c3n2071ceb8pn"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_rfqcv"]
[ext_resource type="Texture2D" uid="uid://cw8jv01icjnh1" path="res://assets/enemies/RatDeath-Sheet.png" id="2_dfyv5"]
[ext_resource type="PackedScene" uid="uid://bekel8al0ejto" path="res://scenes/components/health_component.tscn" id="3_hepo6"]
[ext_resource type="Texture2D" uid="uid://bwwt0xhf0yydw" path="res://assets/enemies/RatMoveRight-Sheet.png" id="3_x5mj8"]
[ext_resource type="PackedScene" path="res://scenes/components/hitbox.tscn" id="4_7lduf"]
[ext_resource type="Texture2D" uid="uid://c4g2ad6f80xl2" path="res://assets/enemies/RatMoveDown-Sheet.png" id="4_ejwfw"]
[ext_resource type="Texture2D" uid="uid://72yffd1untpk" path="res://assets/enemies/RatMoveUp-Sheet.png" id="4_rx3hb"]
[ext_resource type="Texture2D" uid="uid://bsrwlm3y1xdlu" path="res://assets/enemies/RatMoveLeft-Sheet.png" id="4_yvujq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_40hcg"]
atlas = ExtResource("2_dfyv5")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_278wl"]
atlas = ExtResource("2_dfyv5")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qsqf"]
atlas = ExtResource("2_dfyv5")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8ad4"]
atlas = ExtResource("2_dfyv5")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrw2"]
atlas = ExtResource("4_ejwfw")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ijl2"]
atlas = ExtResource("4_ejwfw")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8v88"]
atlas = ExtResource("4_ejwfw")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ixi"]
atlas = ExtResource("4_ejwfw")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhggr"]
atlas = ExtResource("4_yvujq")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry6m0"]
atlas = ExtResource("4_yvujq")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_23ohk"]
atlas = ExtResource("4_yvujq")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbkdo"]
atlas = ExtResource("4_yvujq")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dup0"]
atlas = ExtResource("3_x5mj8")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l245"]
atlas = ExtResource("3_x5mj8")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_65abw"]
atlas = ExtResource("3_x5mj8")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5lml"]
atlas = ExtResource("3_x5mj8")
region = Rect2(168, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov1km"]
atlas = ExtResource("4_rx3hb")
region = Rect2(0, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_k07k0"]
atlas = ExtResource("4_rx3hb")
region = Rect2(56, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_phj6i"]
atlas = ExtResource("4_rx3hb")
region = Rect2(112, 0, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_saanl"]
atlas = ExtResource("4_rx3hb")
region = Rect2(168, 0, 56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_71y4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40hcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_278wl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qsqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8ad4")
}],
"loop": false,
"name": &"die",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ijl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8v88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ixi")
}],
"loop": true,
"name": &"move_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhggr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry6m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23ohk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbkdo")
}],
"loop": true,
"name": &"move_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dup0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l245")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65abw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5lml")
}],
"loop": true,
"name": &"move_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov1km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k07k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phj6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saanl")
}],
"loop": true,
"name": &"move_up",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cm2d3"]
radius = 11.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7espm"]
radius = 13.0
height = 46.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_rfqcv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_71y4a")
animation = &"move_up"
autoplay = "move_down"
speed_scale = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource("CapsuleShape2D_cm2d3")

[node name="HealthComponent" parent="." instance=ExtResource("3_hepo6")]
position = Vector2(96.6766, 328.701)
max_health = 200.0

[node name="Hitbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_7lduf")]
unique_name_in_owner = true
collision_layer = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
rotation = 3.14159
shape = SubResource("CapsuleShape2D_7espm")
debug_color = Color(0.885887, 0.302521, 0.357986, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
